# colorobj

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  angular-map.cpp  angular-map.h  draw.cpp  draw.h  dump.cpp  dump.h  flattened_mesh.cpp  flattened_mesh.h  intersection.h  main.cpp  main.h  simple_svg_1.0.0.hpp
src/mascgl-3/: CMakeLists.txt  gettime.h  model.cpp  model.h  objReader.h
src/mascgl-3/mathtool/: Basic.cpp  Basic.h  CMakeLists.txt  DualQuaternion.h  Matrix.h  Point.h  Quaternion.h  Vector.h
src/mascgl-3/modelgraph/: CMakeLists.txt  ModelEdge.h  ModelGraph.h  ModelNode.h
src/mascgl-3/soil/: CMakeLists.txt
